Try run Win Build.